@@ -268,6 +268,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12803: SSLContext.load_cert_chain() now accepts a password argument
+  to be used if the private key is encrypted.  Patch by Adam Simpkins.
+
 - Issue #11657: Fix sending file descriptors over 255 over a multiprocessing
   Pipe.
 
